--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  google-site-verification: google3ffa614a6c17d9f2.html
   <title>SIGMACS SECURITY S.A.R.L</title>
 
   <link rel="stylesheet" href="style.css">
@@ -290,3 +291,4 @@
 
 </body>
 </html>
+
