--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="v90WQ-YuXoSyg8qLpaTm6jPs9QNqNOLgYIPuBzr5QqM" />
   <title>SIGMACS SECURITY S.A.R.L</title>
 
   <link rel="stylesheet" href="style.css">
@@ -290,6 +291,7 @@
 
 </body>
 </html>
+
 
 
 
