--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 </div>
 
 
-    <!-- Manned Guarding -->
+    <!-- Static Guarding Services -->
     <div class="service-block">
       <div class="service-image">
         <img src="images/unarmed-security.jpg" alt="Unarmed Security">
@@ -291,6 +291,7 @@
 
 </body>
 </html>
+
 
 
 
