--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           We offer 24/7 protection, strict access control, and detailed incident reporting to ensure your property and people are always secure.
         </p>
         <div class="service-buttons">
-          <a href="https://wa.me/+254703291888?text=Hello,%20I%20would%20like%20to%20get%20an%20assessment%20for%20Unarmed%20Security%20services." 
+          <a href="https://wa.me/+254703291888?text=Hello,%20I%20would%20like%20to%20get%20an%20assessment%20for%20static%20guarding%20services." 
              class="btn-primary small" target="_blank">
             Get Assessment
           </a>
@@ -291,6 +291,7 @@
 
 </body>
 </html>
+
 
 
 
